FINAL UPDATE (beta)

--- a/aurasynth-frontend/index.html
+++ b/aurasynth-frontend/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AuraSynth</title>
+    <!-- Add to your public/index.html -->
+    <script src="https://cdn.jsdelivr.net/npm/jzz"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jzz-synth-tiny"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jzz-midi-smf"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jzz-gui-player"></script>
+
   </head>
   <body>
     <div id="root"></div>
